<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        app:titleTextColor="@color/colorPrimaryDark">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar_search"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar_search"
        app:layout_constraintVertical_bias="0.208" />

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar_search"
        app:layout_constraintVertical_bias="0.07"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/settingsUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry"
        app:layout_constraintVertical_bias="0.803" />

    <Spinner
        android:id="@+id/spnPreferences"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toTopOf="@+id/settingsUpdateBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry"
        app:layout_constraintVertical_bias="0.245" />

</androidx.constraintlayout.widget.ConstraintLayout>