<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_margin="30dp"
        android:background="#d3d3d3"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="460dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:layout_width="251dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/welcome"
                    android:textSize="24dp" />


                <Button
                    android:id="@+id/logInWelcomeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_red"
                    android:text="@string/log_in"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" />

                <TextView
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/createAccountWelcomeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_grey"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>