<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapters.ArticleView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091">

        <!--        <TextView-->
        <!--            android:id="@+id/txt_article_headline_clicked"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:paddingHorizontal="6dp"-->
        <!--            android:text="@string/headlineName"-->
        <!--            android:textSize="20sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/txt_article_source_for_you" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/txt_article_source_clicked"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="12dp"-->
        <!--            android:paddingHorizontal="6dp"-->
        <!--            android:paddingVertical="6dp"-->
        <!--            android:paddingBottom="100dp"-->
        <!--            android:text="@string/source"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/img_article_for_you" />-->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorAccent"
            app:titleTextColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="2dp" />


        <TextView
            android:id="@+id/txt_article_headline_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/headlineName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_article_published_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_article_published_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_at"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="124dp" />

        <ImageView
            android:id="@+id/img_article_view"
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:layout_marginTop="52dp"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_article_published_view"
            app:srcCompat="@drawable/ic_breaking_news" />

        <TextView
            android:id="@+id/txt_article_source_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/source"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_article_view" />

        <TextView
            android:id="@+id/txt_article_body_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_article_source_view"
            app:layout_constraintVertical_bias="0.049" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>